--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -262,6 +262,12 @@ img {
 .about__subtitle {
   margin-bottom: var(--mb-2);
 }
+.experience__subtitle {
+  margin-bottom: 0px;
+  margin-top: 4px;
+  padding-bottom: 0px;
+  
+}
 
 .about__img {
   justify-self: center;
@@ -320,7 +326,7 @@ img {
 }
 
 .skills__html {
-  width: 85%;
+  width: 70%;
 }
 
 .skills__css {
